test/libsolidity/syntaxTests/pragma/unterminated_version.sol
pragma solidity 0.4.3
pragma abicoder v2;
// ----
// ParserError 1684: (0-41): Found version pragma, but failed to parse it. Please ensure there is a trailing semicolon.
